--- a/_config.yml
+++ b/_config.yml
@@ -466,6 +466,8 @@ vega-lite:
 jekyll_get_json:
   - data: resume
     json: assets/json/resume.json # it can also be an url
+  - data: gyt_resume
+    json: assets/json/gyt-resume.json
 jsonresume:
   - basics
   - work
